fixed padding on mobile

--- a/Michele Site/css/demo4.css
+++ b/Michele Site/css/demo4.css
@@ -1212,6 +1212,13 @@ and (max-width : 400px) {
         margin-bottom: -61px;
     }
 
+    .newBox{
+
+        position: relative;
+        top: -137px;
+
+    }
+
 
 
 
